<resources>
    <string name="app_name">AvaliacaoMusical</string>
    <string name="cadastro_de_artista">Cadastro de Artista</string>
    <string name="nome">Nome:</string>
    <string name="vazio" />
    <string name="escolha_uma_opcao">Escolha uma opção</string>
    <string name="artista_solo">Artista solo</string>
    <string name="banda">Banda</string>
    <string name="quais_generos_musicais">Quais gêneros musicais?</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="musica_classica">Música clássica</string>
    <string name="digite_o_nome_do_artista">Digite o nome do artista</string>
    <string name="eletronica">Eletrônica</string>
    <string name="jazz">Jazz</string>
    <string name="selecione_o_pais">Selecione o país:</string>
    <string name="limpar_campos">Limpar campos</string>
    <string name="salvar">Salvar</string>
    <string name="campos_limpos">Campos limpos!</string>
    <string name="brasil">Brasil</string>
    <string name="argentina">Argentina</string>
    <string name="estados_unidos">Estados Unidos</string>
    <string name="espanha">Espanha</string>
    <string name="suecia">Suécia</string>
    <string name="preencha_o_campo_nome">Preencha o campo nome!</string>
    <string name="selecione_um_tipo_de_artista">Selecione um tipo de artista!</string>
    <string name="selecione_pelo_menos_um_genero_musical">Selecione pelo menos um gênero musical!</string>
    <string name="artista_salvo_com_sucesso">Artista salvo com sucesso!</string>
    <string name="personal_protocol">Personal Protocol</string>
    <string name="softmetal">Softmetal</string>
    <string name="funk_generation">Funk Generation</string>
    <string name="perfect_picture">Perfect Picture</string>
    <string name="brat">Brat</string>
    <string name="generacion_de_cristal">Generacion de Cristal</string>
    <string name="bb_angel">BB/Angel</string>
    <string name="priscilla">Priscilla</string>
    <string name="heaven_knows">Heaven Knows</string>
    <string name="heraldica">Heráldica</string>

    <string name="data_23_junho_2023">23/06/2023</string>
    <string name="data_17_novembro_2022">17/11/2022</string>
    <string name="data_26_abril_2024">26/04/2024</string>
    <string name="data_6_outubro_2022">06/10/2022</string>
    <string name="data_7_junho_2024">07/06/2024</string>
    <string name="data_29_fevereiro_2024">29/02/2024</string>
    <string name="data_8_setembro_2023">08/09/2023</string>
    <string name="data_9_maio_2024">09/05/2024</string>
    <string name="data_10_novembro_2023">10/11/2023</string>
    <string name="data_28_marco_2024">28/03/2024</string>

    <string name="nome_8485">8485</string>
    <string name="bronze_avery">Bronze Avery</string>
    <string name="anitta">Anitta</string>
    <string name="hannah_diamond">Hannah Diamond</string>
    <string name="charli_xcx">Charli XCX</string>
    <string name="luna_ki">Luna Ki</string>
    <string name="tinashe">Tinashe</string>
    <string name="pink_pantheress">Pink Pantheress</string>
    <string name="saramalacara">Salamalacara</string>
    <string name="o_album">"O álbum "</string>
    <string name="foi_selecionado">" foi selecionado"</string>
    <string name="sobre_este_app">Sobre este app</string>
    <string name="autor">Autor: Gabriel Siqueira de Carvalho</string>
    <string name="curso">Curso de Especialização em Tecnologia Java</string>
    <string name="email">gabrielsiqueiracarvalho@alunos.utfpr.edu.br</string>
    <string name="descricao">Aplicativo feito para avaliar álbuns musicais.</string>
    <string name="logo_utfpr">Logo UTFPR</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="adicionar">Adicionar</string>
    <string name="sobre">Sobre</string>
    <string name="avaliar">Avaliar</string>
    <string name="nome_album">Nome do álbum</string>
    <string name="data_lancamento">Data do lançamento</string>
    <string name="artista">Artista</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
</resources>